# chatbot.finetune

./: .gitignore  convert_hf2gguf.py  fine_tune_base_model.py  fine_tune_base_model_finish.py  fine_tune_base_model_multi_hw.py  generate_multi_completions.py  pyproject.toml
