[project]
name = "chatbot-finetune"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "datasets (==4.0.0)",
    "huggingface-hub (==0.34.4)",
    "peft (==0.17.1)",
    "torch (==2.8.0)",
    "transformers (==4.56.0)"
]

[tool.poetry]
packages = [{include = "chatbot"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
